Add post-start step to ensure agent is ready after 'start ecs'

--- a/packaging/amazon-linux-ami/ecs.conf
+++ b/packaging/amazon-linux-ami/ecs.conf
@@ -18,5 +18,6 @@ start on stopped rc RUNLEVEL=[345]
 
 pre-start exec /usr/libexec/amazon-ecs-init pre-start
 exec /usr/libexec/amazon-ecs-init start
+post-start exec /usr/libexec/amazon-ecs-init post-start
 pre-stop exec /usr/libexec/amazon-ecs-init pre-stop
 post-stop exec /usr/libexec/amazon-ecs-init post-stop
